# notion-notebooklm-auto-publisher

./: .env.example  CODEX.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  generate-publish.yml
data/sample_sources/: notebooklm_export.md  notion_task.md
docs/: architecture.md  notion-schema.md  oss-inventory.md  quality-policy.md  setup.md
src/creator_pipeline/: __init__.py  cli.py  config.py  ingest.py  media.py  mixer.py  models.py  notebooklm.py  notion.py  pipeline.py  quality.py
src/creator_pipeline/publishers/: __init__.py  tiktok.py  youtube.py
tests/: test_ingest.py  test_pipeline.py  test_quality.py
