[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-notebooklm-auto-publisher"
version = "0.1.0"
description = "Automate Notion and NotebookLM content remixing into articles, audio, videos, and YouTube/TikTok publishing with quality gates."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AI Automation"}]
dependencies = [
  "httpx>=0.27.0",
  "openai>=1.90.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "Pillow>=10.4.0",
  "google-api-python-client>=2.137.0",
  "google-auth>=2.32.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0", "ruff>=0.5.0"]

[project.scripts]
content-pipeline = "creator_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
